Code optimization and prevent of flickering in mobiles

--- a/src/app/pages/search/search.component.scss
+++ b/src/app/pages/search/search.component.scss
@@ -1,4 +1,4 @@
-#term, #not-found-term {
+#term {
   min-width: 250px;
 }
 
